chore: improve the csv documentation to align with the other pages

--- a/docs/content/docs/3.files/4.csv.md
+++ b/docs/content/docs/3.files/4.csv.md
@@ -3,7 +3,79 @@ title: CSV
 description: How to define, write and query CSV data.
 ---
 
-Nuxt Content supports CSV files out of the box. You can store and query data in CSV format, with options for JSON conversion and custom delimiters.
+## Define Collection
+
+```ts [content.config.ts]
+import { defineCollection, defineContentConfig, z } from '@nuxt/content'
+
+export default defineContentConfig({
+  collections: {
+    authors: defineCollection({
+      type: 'data',
+      source: 'authors/**.csv',
+      schema: z.object({
+        name: z.string(),
+        email: z.string(),
+        avatar: z.string()
+      })
+    })
+  }
+})
+
+```
+
+## Create `.csv` files
+
+Create author files in `content/authors/` directory.
+
+::code-group
+```csv [users.csv]
+id,name,email
+1,John Doe,john@example.com
+2,Jane Smith,jane@example.com
+3,Alice Johnson,alice@example.com
+```
+
+```csv [team.csv]
+name,role,avatar
+John Doe,Developer,https://avatars.githubusercontent.com/u/1?v=4
+Jane Smith,Designer,https://avatars.githubusercontent.com/u/2?v=4
+```
+::
+
+::warning
+Each CSV file should have a header row that defines the column names, which will be used as object keys when parsed.
+::
+
+## Query Data
+
+Now we can query authors:
+
+```vue
+<script lang="ts" setup>
+// Find a single author
+const { data: author } = await useAsyncData('john-doe', () => {
+  return queryCollection('authors')
+    .where('name', '=', 'John Doe')
+    .first()
+})
+
+// Get all authors
+const { data: authors } = await useAsyncData('authors', () => {
+  return queryCollection('authors')
+    .order('name', 'ASC')
+    .all()
+})
+</script>
+
+<template>
+  <ul>
+    <li v-for="author in authors" :key="author.id">
+      {{ author.name }} ({{ author.email }})
+    </li>
+  </ul>
+</template>
+```
 
 ## Configuration
 
@@ -22,34 +94,6 @@ export default defineNuxtConfig({
     }
   }
 })
-```
-
-## Example Usage
-
-Create a CSV file in your content directory:
-
-```csv [content/users.csv]
-id,name,email
-1,John Doe,john@example.com
-2,Jane Smith,jane@example.com
-```
-
-Query the data in your components:
-
-```vue
-<script setup>
-const { data } = await useAsyncData('users', () => 
-  queryCollection('users').find()
-)
-</script>
-
-<template>
-  <ul>
-    <li v-for="user in data" :key="user.id">
-      {{ user.name }} ({{ user.email }})
-    </li>
-  </ul>
-</template>
 ```
 
 With `json: true` in the configuration, each row will be converted to a JavaScript object with the header row used as keys:
@@ -87,9 +131,10 @@ export default defineNuxtConfig({
 
 This would parse CSV files like:
 
-```csv
+```csv [semicolon-data.csv]
 id;name;email
 1;John Doe;john@example.com
+2;Jane Smith;jane@example.com
 ```
 
 ::note
