docs: explain transformers

--- a/docs/content/docs/1.getting-started/3.configuration.md
+++ b/docs/content/docs/1.getting-started/3.configuration.md
@@ -287,6 +287,8 @@ export default defineTransformer({
 
 ::
 
+Read more about transformers in the [Transformers](/docs/advanced/transformers) documentation.
+
 ## `database`
 
 By default Nuxt Content uses a local SQLite database to store and query content. If you like to use another database or you plan to deploy on Cloudflare Workers, you can modify this option.
