Fix  ENV LegacyKeyValueFormat
WARN: LegacyKeyValueFormat: "ENV key=value" should be used instead of legacy "ENV key value" format

--- a/docs/content/docs/6.deploy/8.docker.md
+++ b/docs/content/docs/6.deploy/8.docker.md
@@ -38,8 +38,8 @@ WORKDIR /app
 COPY --from=build /app/.output/ ./
 
 # Change the port and host
-ENV PORT 80
-ENV HOST 0.0.0.0
+ENV PORT=80
+ENV HOST=0.0.0.0
 
 EXPOSE 80
 
