docs: document navigation utils

--- a/docs/content/docs/4.utils/2.query-collection-navigation.md
+++ b/docs/content/docs/4.utils/2.query-collection-navigation.md
@@ -137,3 +137,66 @@ Make sure to create `server/tsconfig.json` file with the following content to av
 ```
 :::
 
+---
+
+## Extra utilities to work with navigation
+
+Content module provides some extra utilities to simplify common use cases like building breadcrumb navigation.
+
+### `findPageBreadcrumb(navigation, path, options?)`
+
+Returns the breadcrumb trail (array of navigation items) for a given path within a navigation tree. Useful for building breadcrumb navigation components.
+
+- `navigation`: The navigation tree (array of ContentNavigationItem).
+- `path`: The current page path.
+- `options` (optional):
+  - `current`: Include the current page in the breadcrumb.
+  - `indexAsChild`: Treat index pages as children.
+
+**Example:**
+
+```ts
+import { findPageBreadcrumb } from '@nuxt/content/utils'
+
+const breadcrumb = findPageBreadcrumb(navigation, '/docs/guide/getting-started')
+// breadcrumb is an array of navigation items leading to the current page
+```
+
+
+### `findPageChildren(navigation, path, options?)`
+
+Finds and returns the direct children of a given path in the navigation tree.
+
+- `navigation`: The navigation tree (array of ContentNavigationItem).
+- `path`: The parent path to find children for.
+- `options` (optional):
+  - `indexAsChild`: Treat index pages as children.
+
+**Example:**
+
+```ts
+import { findPageChildren } from '@nuxt/content/utils'
+
+const children = findPageChildren(navigation, '/docs/guide')
+// children is an array of navigation items under '/docs/guide'
+```
+
+
+
+### `findPageSiblings(navigation, path, options?)`
+
+Returns the sibling navigation items for a given path (i.e., other items with the same parent).
+
+- `navigation`: The navigation tree (array of ContentNavigationItem).
+- `path`: The current page path.
+- `options` (optional):
+  - `indexAsChild`: Treat index pages as children.
+
+**Example:**
+
+```ts
+import { findPageSiblings } from '@nuxt/content/utils'
+
+const siblings = findPageSiblings(navigation, '/docs/guide/getting-started')
+// siblings is an array of navigation items that share the same parent as the current page
+```
