docs: generated SQL in `queryCollection` conditions
close #3333

--- a/docs/content/docs/4.utils/1.query-collection.md
+++ b/docs/content/docs/4.utils/1.query-collection.md
@@ -103,8 +103,12 @@ const route = useRoute()
 const { data } = await useAsyncData(route.path, () => {
   return queryCollection('docs')
     .where('date', '<', '2024-04-04')
+    .where('category', '=', 'news')
     .all()
 })
+
+// Generated SQL
+// SELECT * FROM docs WHERE date < '2024-04-04' AND category = 'news'
 ```
 
 ### `andWhere(groupFactory: QueryGroupFunction<Collection>)`
@@ -121,6 +125,9 @@ const { data } = await useAsyncData('recent-docs', () => {
     .andWhere(query => query.where('date', '>', '2024-01-01').where('category', '=', 'news'))
     .all()
 })
+
+// Generated SQL
+// SELECT * FROM docs WHERE published = true AND (date > '2024-01-01' AND category = 'news')
 ```
 
 ### `orWhere(groupFactory: QueryGroupFunction<Collection>)`
@@ -137,6 +144,9 @@ const { data } = await useAsyncData('featured-docs', () => {
     .orWhere(query => query.where('featured', '=', true).where('priority', '>', 5))
     .all()
 })
+
+// Generated SQL
+// SELECT * FROM docs WHERE published = true AND (featured = true OR priority > 5)
 ```
 
 ### `order(field: keyof Collection, direction: 'ASC' | 'DESC')`
