docs: add note about SQL connector

--- a/docs/content/docs/1.getting-started/2.installation.md
+++ b/docs/content/docs/1.getting-started/2.installation.md
@@ -61,6 +61,16 @@ deno -A npm:create-nuxt@latest <project-name>
 ```
 ::
 
+::note{color="warning"}
+When you run your project in Node.js, Nuxt Content will ask you about the database connector to use.
+You can choose to install `better-sqlite3` or `sqlite3` package.
+
+:br
+
+If you don't want to install any package, you can use native SQLite from Node.js@v22.5.0 or newer.
+Checkout [`experimental.nativeSqlite` configuration](/docs/getting-started/configuration#experimentalnativesqlite).
+::
+
 ### Create your First Collection
 
 Create a `content.config.ts` file in your project root directory:
