docs(blog): undraft docus v3

--- a/docs/content/docs/1.getting-started/2.installation.md
+++ b/docs/content/docs/1.getting-started/2.installation.md
@@ -67,7 +67,9 @@ You can choose to install `better-sqlite3` or `sqlite3` package.
 
 :br
 
-If you don't want to install any package, you can use native SQLite from Node.js@v22.5.0 or newer.
+ 
+
+If you don't want to install any package, you can use native SQLite from Node.js\@v22.5.0 or newer.
 Checkout [`experimental.nativeSqlite` configuration](/docs/getting-started/configuration#experimentalnativesqlite).
 ::
 
