--- a/docs/content/docs/6.deploy/4.cloudflare-pages.md
+++ b/docs/content/docs/6.deploy/4.cloudflare-pages.md
@@ -15,7 +15,7 @@ Quick Setup
 
 Nuxt Content module has a built-in integration with [Cloudflare Pages](https://pages.cloudflare.com) to deploy your content.
 
-Module will automatically detects the build target and prepare the necessary configuration for Cloudflare Pages. Content module currently only support [`cloudflare-pages` presets](https://nuxt.com/deploy/cloudflare).
+Module will automatically detects the build target and prepare the necessary configuration for Cloudflare Pages.
 
 You can either use `--preset=cloudflare_pages` option on `nuxi build` command or use `nuxt.config.ts` to configure the preset.
 
