--- a/docus/content/docs/5.components/2.prose.md
+++ b/docus/content/docs/5.components/2.prose.md
@@ -25,7 +25,7 @@ Prose components are originally part of [`@nuxtjs/mdc`](https://github.com/nuxt-
 [Link](/docs/components/prose)
 ```
 
-  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  :::code-preview{icon="i-lucide-eye" label="Preview"}
   [Link](/docs/components/prose)
   :::
 ::
@@ -37,7 +37,7 @@ Prose components are originally part of [`@nuxtjs/mdc`](https://github.com/nuxt-
 > Block quote
 ```
 
-  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  :::code-preview{icon="i-lucide-eye" label="Preview"}
   > Block quote
   :::
 ::
@@ -53,7 +53,7 @@ Prose components are originally part of [`@nuxtjs/mdc`](https://github.com/nuxt-
   ```
 ````
 
-  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  :::code-preview{icon="i-lucide-eye" label="Preview"}
   ```js [file.js]
   export default () => {
     console.log('Code block')
@@ -89,7 +89,7 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 `const code: string = 'highlighted code inline'`{lang="ts"}
 ```
 
-  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  :::code-preview{icon="i-lucide-eye" label="Preview"}
   `code`
 
   `const code: string = 'highlighted code inline'`
@@ -103,7 +103,7 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 # H1 Heading
 ```
 
-  :::preview-card{.pt-4 label="Preview"}
+  :::code-preview{.pt-4 label="Preview"}
   <!-- markdownlint-disable-next-line -->
   # H1 Heading
   :::
@@ -116,7 +116,7 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 ## H2 Heading
 ```
 
-  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  :::code-preview{icon="i-lucide-eye" label="Preview"}
   <!-- markdownlint-disable-next-line -->
   ## H2 Heading
   :::
@@ -129,7 +129,7 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 ### H3 Heading
 ```
 
-  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  :::code-preview{icon="i-lucide-eye" label="Preview"}
   <!-- markdownlint-disable-next-line -->
   ### H3 Heading
   :::
@@ -142,7 +142,7 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 #### H4 Heading
 ```
 
-  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  :::code-preview{icon="i-lucide-eye" label="Preview"}
   <!-- markdownlint-disable-next-line -->
   #### H4 Heading
   :::
@@ -155,7 +155,7 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 ##### H5 Heading
 ```
 
-  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  :::code-preview{icon="i-lucide-eye" label="Preview"}
   <!-- markdownlint-disable-next-line -->
   ##### H5 Heading
   :::
@@ -168,7 +168,7 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 ###### H6 Heading
 ```
 
-  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  :::code-preview{icon="i-lucide-eye" label="Preview"}
   <!-- markdownlint-disable-next-line -->
   ###### H6 Heading
   :::
@@ -185,7 +185,7 @@ Divider under.
 Divider above.
 ```
 
-  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  :::code-preview{icon="i-lucide-eye" label="Preview"}
   Divider under.
 
   ---
@@ -201,7 +201,7 @@ Divider above.
 ![A Cool Image](https://nuxt.com/assets/design-kit/icon-green.png)
 ```
 
-  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  :::code-preview{icon="i-lucide-eye" label="Preview"}
   ![A Cool Image](https://nuxt.com/assets/design-kit/icon-green.png)
   :::
 ::
@@ -216,7 +216,7 @@ Divider above.
 - List
 ```
 
-  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  :::code-preview{icon="i-lucide-eye" label="Preview"}
   - Just
   - An
   - Unordered
@@ -231,7 +231,7 @@ Divider above.
 - List element
 ```
 
-  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  :::code-preview{icon="i-lucide-eye" label="Preview"}
   - List element
   :::
 ::
@@ -245,7 +245,7 @@ Divider above.
 3. Baz
 ```
 
-  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  :::code-preview{icon="i-lucide-eye" label="Preview"}
   1. Foo
   2. Bar
   3. Baz
@@ -259,7 +259,7 @@ Divider above.
 Just a paragraph.
 ```
 
-  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  :::code-preview{icon="i-lucide-eye" label="Preview"}
   Just a paragraph.
   :::
 ::
@@ -271,7 +271,7 @@ Just a paragraph.
 **Just a strong paragraph.**
 ```
 
-  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  :::code-preview{icon="i-lucide-eye" label="Preview"}
   **Just a strong paragraph.**
   :::
 ::
@@ -283,7 +283,7 @@ Just a paragraph.
 _Just an italic paragraph._
 ```
 
-  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  :::code-preview{icon="i-lucide-eye" label="Preview"}
   _Just an italic paragraph._
   :::
 ::
@@ -299,7 +299,7 @@ _Just an italic paragraph._
 | 3   | Wonderful | Website     |
 ```
 
-  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  :::code-preview{icon="i-lucide-eye" label="Preview"}
 
   | Key | Type      | Description |
   | --- | --------- | ----------- |
