--- a/docus/content/docs/8.studio/3.content.md
+++ b/docus/content/docs/8.studio/3.content.md
@@ -192,7 +192,7 @@ export default defineContentConfig({
 })    
 ```
 
-  :::preview-card{icon="i-lucide-eye" label="Generated Form"}
+  :::code-preview{icon="i-lucide-eye" label="Generated Form"}
   ![Form preview](/docs/studio/preview-schema.png)
   :::
 ::
