--- a/docus/content/docs/8.studio/5.config.md
+++ b/docus/content/docs/8.studio/5.config.md
@@ -110,7 +110,7 @@ Once your schema is deployed. Any user can access the **Data** section and play 
 Any update in the form will be directly applied to the `app.config.ts` file. You can review those changes on the review page.
 
 ::code-group
-  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  :::code-preview{icon="i-lucide-eye" label="Preview"}
   ![app config UI on Studio](/docs/studio/home-data-studio-dark.webp)
   :::
 
