Apply suggestions from code review

--- a/docs/content/docs/4.utils/2.query-collection-navigation.md
+++ b/docs/content/docs/4.utils/2.query-collection-navigation.md
@@ -155,11 +155,10 @@ Returns the headline (name of the parent folder) for a given path within a navig
 **Example:**
 
 ```ts
-import { findPageBreadcrumb } from '@nuxt/content/utils'
+import { findPageHeadline } from '@nuxt/content/utils'
 
-const breadcrumb = findPageBreadcrumb(navigation, '/docs/guide/getting-started')
-// breadcrumb is an array of navigation items leading to the current page
-```
+const headline = findPageHeadline(navigation, '/docs/guide/getting-started')
+// headline is a string containing the name of the parent folder
 
 ### `findPageBreadcrumb(navigation, path, options?)`
 
