--- a/docs/content/docs/4.utils/2.query-collection-navigation.md
+++ b/docs/content/docs/4.utils/2.query-collection-navigation.md
@@ -158,7 +158,8 @@ Returns the headline (name of the parent folder) for a given path within a navig
 import { findPageHeadline } from '@nuxt/content/utils'
 
 const headline = findPageHeadline(navigation, '/docs/guide/getting-started')
-// headline is a string containing the name of the parent folder
+// headline is a string that contains the name of the parent folder
+```
 
 ### `findPageBreadcrumb(navigation, path, options?)`
 
