fix(docs): update query method to use `first()` for consistency

--- a/docs/content/docs/5.components/0.content-renderer.md
+++ b/docs/content/docs/5.components/0.content-renderer.md
@@ -45,7 +45,7 @@ If the queried content is **missing**, you can display a **custom fallback messa
 <script lang="ts" setup>
 const route = useRoute()
 const { data: page } = await useAsyncData(route.path, () => {
-  return queryCollection('docs').path(route.path).findOne()
+  return queryCollection('docs').path(route.path).first()
 })
 </script>
 
