docs: migration to docus (#3417)

--- a/docs/content/docs/3.files/1.markdown.md
+++ b/docs/content/docs/3.files/1.markdown.md
@@ -181,7 +181,7 @@ The content of the card
 </template>
 ```
 
-  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  :::code-preview{icon="i-lucide-eye" label="Preview"}
     ::::example-card
     The content of the card
     ::::
@@ -216,7 +216,7 @@ This will be rendered inside the `description` slot.
 </template>
 ```
 
-  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  :::code-preview{icon="i-lucide-eye" label="Preview"}
     ::::example-hero
     My Page Title
     
@@ -235,7 +235,7 @@ You can use Markdown inside your components slots:
 
   :::code-group
   ```mdc [index.md]
-  ::the-title
+  ::my-title
   A [rich text](/) will be **rendered** by the component.
   ::
   ```
@@ -247,8 +247,8 @@ You can use Markdown inside your components slots:
     </h1>
   </template>
   ```
-  
-    ::::preview-card{icon="i-lucide-eye" label="Preview"}
+
+    ::::code-preview{icon="i-lucide-eye" label="Preview"}
       :::::example-title
       A [rich text](/) will be **rendered** by the component.
       :::::
@@ -273,17 +273,28 @@ The **alert** component.
 
 ```vue [Alert.vue]
 <script setup>
-defineProps(['type'])
+const props = defineProps({ type: { type: String } })
+
+const alertClass = computed(() => {
+  return {
+    warning: 'bg-orange-100 border-orange-200 dark:bg-orange-900 dark:border-orange-800',
+    info: 'bg-blue-100 border-blue-200 dark:bg-blue-900 dark:border-blue-800',
+    success: 'bg-green-100 border-green-200 dark:bg-green-900 dark:border-green-800',
+  }[props.type]
+})
 </script>
 
 <template>
-  <div :class="[type]">
+  <div
+    class="text-black p-2 border dark:text-white rounded"
+    :class="alertClass"
+  >
     <slot mdc-unwrap="p" />
   </div>
 </template>
 ```
 
-  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  :::code-preview{icon="i-lucide-eye" label="Preview"}
     ::::example-alert{type="warning"}
     The **alert** component.
     ::::
@@ -373,11 +384,11 @@ defineProps({
 </template>
 ```
 
-  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  :::code-preview{icon="i-lucide-eye" label="Preview"}
     ::::example-icon-card
     ---
     description: Harness the full power of Nuxt and the Nuxt ecosystem.
-    icon: IconNuxt
+    icon: i-simple-icons-nuxtdotjs
     title: Nuxt Architecture.
     ---
     ::::
@@ -395,7 +406,7 @@ Possible values are all named attributes, classes with the notation `.class-name
 Hello [World]{style="color: green;" .custom-class #custom-id}!
 ```
 
-  :::preview-card{icon="i-lucide-eye" label="Preview"}
+  :::code-preview{icon="i-lucide-eye" label="Preview"}
   Hello [World]{#custom-id .custom-class style="color: green;"} !
   :::
 ::
@@ -406,14 +417,14 @@ In addition to mdc components and `span`, attribute syntax will work on images, 
 ```md [index.md]
 Attributes work on:
 
-- [link](#attributes){style="background-color: pink;"}, `code`{style="color: cyan;"},
+- [link](#attributes){style="background-color: green;"}, `code`{style="color: cyan;"},
 - _italic_{style="background-color: yellow; color:black;"} and **bold**{style="background-color: lightgreen;"} texts.
 ```
 
-  :::preview-card{prose label="Preview"}
+  :::code-preview{prose label="Preview"}
   Attributes work on:
-  
-  - [link](#attributes){style="background-color: pink;"}, `code`,
+
+  - [link](#attributes){style="background-color: green;"}, `code`,
   - *italic* and **bold** texts.
   :::
 ::
