--- a/docs/content/docs/7.advanced/1.fulltext-search.md
+++ b/docs/content/docs/7.advanced/1.fulltext-search.md
@@ -30,7 +30,7 @@ const searchTerm = ref('')
 </template>
 ```
 
-  :::preview-card{label="Live Preview"}
+  :::code-preview{label="Preview" icon="i-lucide-eye"}
     ::::example-fulltext-content-search
     ::::
   :::
@@ -77,7 +77,7 @@ const result = computed(() => miniSearch.search(toValue(query)))
 </template>
 ```
 
-  :::preview-card{label="Live Preview"}
+  :::code-preview{label="Preview" icon="i-lucide-eye"}
     ::::example-fulltext-mini-search
     ::::
   :::
@@ -121,7 +121,7 @@ const result = computed(() => fuse.search(toValue(query)).slice(0, 10))
 </template>
 ```
 
-  :::preview-card{label="Live Preview"}
+  :::code-preview{label="Preview" icon="i-lucide-eye"}
     ::::example-fulltext-fusejs
     ::::
   :::
