fix: sub list with double dot

--- a/docs/content/docs/4.utils/1.query-collection.md
+++ b/docs/content/docs/4.utils/1.query-collection.md
@@ -45,15 +45,15 @@ interface CollectionQueryBuilder<T> {
 
 Create a query builder to search in the specific collection.
 
-- Parameters:
-- - `collection`: The key of defined collection in `content.config.ts`
+- Parameter:
+  - `collection`: The key of defined collection in `content.config.ts`
 
 ### `path(path: string)`
 
 Search for contents that have specific `path`. (`path` is an special field in `page` collections which generates based on fs path and can be use as route to render the content)
 
 - Parameter:
-- - `path`: The path string to match.
+  - `path`: The path string to match.
 
 ```ts
 const route = useRoute()
