--- a/docs/content/docs/8.studio/3.content.md
+++ b/docs/content/docs/8.studio/3.content.md
@@ -77,10 +77,10 @@ You can create Vue components and integrate them into Markdown. They just need t
     </div>
     <div class="flex flex-col">
       <h3 class="font-semibold">
-        <ContentSlot name="title" />
+        <slot name="title" />
       </h3>
       <span>
-        <ContentSlot name="description" />
+        <slot name="description" />
       </span>
     </div>
   </div>
