docs: extend tip for azure static web apps

--- a/docs/content/docs/6.deploy/2.serverless.md
+++ b/docs/content/docs/6.deploy/2.serverless.md
@@ -108,7 +108,7 @@ The linked database will be loaded on the server side when booting the server. I
 ::
 
 ::tip
-If you wish to deploy to AWS Lambda, you need to make sure your sqlite file is in `/tmp` since this is the only writeable folder
+If you wish to deploy to AWS Lambda or Azure Static Web Apps, you need to make sure your sqlite file is in `/tmp` since this is the only writeable folder
 
 ```ts
 export default defineNuxtConfig({
