docs: document `sqliteConnector`

--- a/docs/content/docs/1.getting-started/3.configuration.md
+++ b/docs/content/docs/1.getting-started/3.configuration.md
@@ -496,7 +496,23 @@ preview: {
 
 Experimental features that are not yet stable.
 
-### `experimental.nativeSqlite`
+### `experimental.sqliteConnector`
+
+SQLite connectors have limitations in different environments. Some work in serverless environments, while others do not. Nuxt Content supports three different SQLite connectors to cover all environments:
+
+- `better-sqlite3`: Works in all Node environments, GitHub CI, Vercel CI and production, Cloudflare CI pipelines, etc. (Does **not** work in WebContainers and StackBlitz)
+- `sqlite3`: Works in Node environments, GitHub CI, and StackBlitz. (Does **not** work in Vercel or Cloudflare)
+- `native`: As of Node.js v22.5.0, the `node:sqlite` module is available natively in Node.js. This connector works in all Node environments with Node.js version 22.5.0 or newer.
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  content: {
+    experimental: { sqliteConnector: 'native' },
+  },
+});
+```
+
+### `experimental.nativeSqlite` (deprecated, use `sqliteConnector`)
 
 As of Node.js v22.5.0, the `node:sqlite` module is available natively in Node.js.
 This allows Nuxt Content to use SQLite as a database without the need for an external package.
