docs: create examples and integrations section

--- a/docs/content/docs/7.integrations/02.llms.md
+++ b/docs/content/docs/7.integrations/02.llms.md
@@ -1,5 +1,5 @@
 ---
-title: LLMs Integration
+title: LLMs module 
 description: Learn how to generate AI-ready content files using Nuxt Content and
   the Nuxt LLMs module.
 ---
