--- a/docs/content/docs/7.integrations/01.i18n.md
+++ b/docs/content/docs/7.integrations/01.i18n.md
@@ -1,20 +1,39 @@
 ---
 title: I18n module
+description: Learn how to create multi-language websites using Nuxt Content with the @nuxtjs/i18n module.
 ---
 
-Nuxt Content works with the `@nuxtjs/i18n` module to create multi-language websites.
+Nuxt Content integrates with [`@nuxtjs/i18n`](https://i18n.nuxtjs.org/) to create multi-language websites. When both modules are configured together, you can organize content by language and automatically serve the correct content based on the user's locale.
 
-Setting up I18n with Nuxt Content takes three steps:
+## Setup
 
-1. **Prepare your documents**: Create separate collections for each language
-2. **Configure I18n in Nuxt**: Set up the `i18n` module in `nuxt.config.ts`
-3. **Fetch and render content**: Create pages that load content based on the current locale
+::prose-steps
+### Install the required module
 
-## Step 1: Define Collections for Each Language
+```bash [terminal]
+npm install @nuxtjs/i18n
+```
+
+### Configure your `nuxt.config.ts`
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  modules: ['@nuxt/content', '@nuxtjs/i18n'],
+  i18n: {
+    locales: [
+      { code: 'en', name: 'English', language: 'en-US', dir: 'ltr' },
+      { code: 'fr', name: 'French', language: 'fr-FR' },
+      { code: 'fa', name: 'Farsi', language: 'fa-IR', dir: 'rtl' },
+    ],
+    strategy: 'prefix_except_default',
+    defaultLocale: 'en',
+  }
+})
+```
+
+### Define collections for each language
 
 Create separate collections for each language in your `content.config.ts`:
-
-
 
 ```ts [content.config.ts]
 const commonSchema = ...;
@@ -52,26 +71,7 @@ export default defineContentConfig({
 })
 ```
 
-## Step 2: Configure I18n Module
-
-Set up your languages and routing strategy in `nuxt.config.ts`:
-
-```ts [nuxt.config.ts]
-export default defineNuxtConfig({
-  // ...
-  i18n: {
-    locales: [
-      { code: 'en', name: 'English', language: 'en-US', dir: 'ltr' },
-      { code: 'fr', name: 'French', language: 'fr-FR' },
-      { code: 'fa', name: 'Farsi', language: 'fa-IR', dir: 'rtl' },
-    ],
-    strategy: 'prefix_except_default',
-    defaultLocale: 'en',
-  }
-})
-```
-
-## Step 3: Create Dynamic Pages
+### Create dynamic pages
 
 Create a catch-all page that fetches content based on the current locale:
 
@@ -108,11 +108,13 @@ const { data: page } = await useAsyncData('page-' + slug.value, async () => {
   </div>
 </template>
 ```
+::
 
+That's it! 🚀 Your multi-language content site is ready.
 
 ## Content Structure
 
-Organize your content files in language-specific folders:
+Organize your content files in language-specific folders to match your collections:
 
 ```
 content/
@@ -130,6 +132,30 @@ content/
     index.md
     about.md
 ```
+
+Each language folder should contain the same structure to ensure content parity across locales.
+
+## Fallback Strategy
+
+You can implement a fallback strategy to show content from the default locale when content is missing in the current locale:
+
+```ts [pages/\[...slug\].vue]
+const { data: page } = await useAsyncData('page-' + slug.value, async () => {
+  const collection = ('content_' + locale.value) as keyof Collections
+  let content = await queryCollection(collection).path(slug.value).first()
+
+  // Fallback to default locale if content is missing
+  if (!content && locale.value !== 'en') {
+    content = await queryCollection('content_en').path(slug.value).first()
+  }
+
+  return content
+})
+```
+
+::prose-warning
+Make sure to handle missing content gracefully and provide clear feedback to users when content is not available in their preferred language.
+::
 
 ## Complete Examples
 
