docs: fix typo in content editors

--- a/docs/content/docs/9.studio/3.content.md
+++ b/docs/content/docs/9.studio/3.content.md
@@ -13,7 +13,7 @@ seo:
 Nuxt Studio offers a versatile workspace for both developers and content writers, giving them the freedom to choose between our differents editors:
 
 - [Notion-like editor](#notion-like-editor-markdown-files) for `Markdown` files
-- [Form editor](#form-editor-yaml-and-json-files) for `YAML` and `JSON` files
+- [Form editor](#form-editor) for `YAML` and `JSON` files
 - [Code editor](#code-editor) for any kind of files (for technical users only)
 
 ::tip
