fix: `ProseCode` preview syntax highlighting

--- a/docs/content/docs/5.components/2.prose.md
+++ b/docs/content/docs/5.components/2.prose.md
@@ -92,7 +92,7 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
   :::code-preview{icon="i-lucide-eye" label="Preview"}
   `code`
 
-  `const code: string = 'highlighted code inline'`
+  `const code: string = 'highlighted code inline'`{lang="ts"}
   :::
 ::
 
