--- a/docs/content/docs/2.collections/1.define.md
+++ b/docs/content/docs/2.collections/1.define.md
@@ -38,7 +38,7 @@ export default defineContentConfig({
   collections: {
     docs: defineCollection({
       // Specify the type of content in this collection
-      type: 'page'
+      type: 'page',
       // Load every file inside the `content` directory
       source: '**',
     })
