docs(studio): iconLibraries option in editor schema def

--- a/docs/content/docs/9.studio/3.content.md
+++ b/docs/content/docs/9.studio/3.content.md
@@ -116,11 +116,15 @@ The visual editor simplifies the component edition, allowing you to integrate an
 
 :video{autoplay controls loop src="https://res.cloudinary.com/nuxt/video/upload/v1744126742/studio/finalpropscomps_usfabp.mp4"}
 
- 
-
 All components in the `/components/content` folder are available in the editor. Studio users can type `/` anywhere while editing to access the list of available components.
 
-:tip[Take a look at this section to validate your `Vue` component integration in the editor in local development.]{to="/docs/studio/debug"}
+  :::tip{to="/docs/studio/debug"}
+  Take a look at this section to validate your 
+  
+  `Vue`
+  
+   component integration in the editor in local development.
+  :::
 ::
 
 #### Integrate built-in components from external libraries
@@ -220,7 +224,11 @@ This allows you to define custom inputs or hide fields.
 #### Usage
 
 ```ts [content.config.ts]
-mainScreen: z.string().editor({ input: 'media' })
+// Icon
+icon: z.string().editor({ input: 'icon', iconLibraries: ['lucide', 'simple-icons'] })
+
+// Media
+image: z.string().editor({ input: 'media' })
 ```
 
 #### Options
@@ -229,7 +237,11 @@ mainScreen: z.string().editor({ input: 'media' })
 
 You can set the editor input type. Currently `icon` and `media` are available.
 
-##### `hidden: Boolean`
+##### `iconLibraries: Array<string>`
+
+Specifies which [Iconify](https://icones.js.org/) libraries to display. Use this option to filter and limit the available icon sets.
+
+`hidden: Boolean`
 
 This option can be set to avoid the display of a field in the Studio editor.
 
