docs: use `kbd` for keyboard shortcuts

--- a/docs/content/docs/9.studio/6.debug.md
+++ b/docs/content/docs/9.studio/6.debug.md
@@ -58,5 +58,5 @@ That's it! You should now be able to access Studio UI and confirm that your conf
 ::
 
 ::warning
-Any modification of your `nuxt.config.ts` file or any changes in a Vue file require a restart of the Nuxt dev server. Once the server has restarted you can synchronize the Studio interface by calling the `Sync meta` action from command menu :shortcut{value="meta"} :shortcut{value="K"} . A refresh of the Studio app should also apply the update.
+Any modification of your `nuxt.config.ts` file or any changes in a Vue file require a restart of the Nuxt dev server. Once the server has restarted you can synchronize the Studio interface by calling the `Sync meta` action from command menu :kbd{value="meta"} :kbd{value="K"} . A refresh of the Studio app should also apply the update.
 ::
